# enthusiast-starter

./: .gitignore  Dockerfile  Dockerfile.development  README.md  docker-compose.yml
config/: env.sample  settings_override.py
src/: pyproject.toml
src/enthusiast_custom/: __init__.py  my_plugin.py
src/enthusiast_custom/examples/: pdf_documents_plugin.py
src/enthusiast_custom/examples/data_extraction/data_extraction/: agent.py  callbacks.py  config.py  prompt.py
src/enthusiast_custom/examples/data_extraction/data_extraction/tools/: data_extraction.py  data_verification.py
src/enthusiast_custom/examples/pdf_agent/: config.py
src/enthusiast_custom/examples/pdf_agent/pdf_agent/: agent.py  config.py  prompt.py
src/enthusiast_custom/examples/pdf_agent/pdf_agent/tools/: pdf_context_tool.py
src/enthusiast_custom/examples/pdf_agent/plugins/: pdf_documents_plugin.py
src/enthusiast_custom/examples/product_search/product_search/: agent.py  builder.py  callbacks.py  config.py  memory.py  prompt.py  retrievers.py
src/enthusiast_custom/examples/product_search/product_search/tools/: product_search.py  product_verification.py
